Created a file for the 5050-v and base-v

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 .DS_Store
 
 # Ignore local venv
-venv/
-venv310/
+diabetes-venv
 
 # Generated Directories
 kt_dir/
+
+# Ignore generated data
+.python-version
